Cambios en los json, nuevos directorios para las imágenes y nuevos html

--- a/languages/en.json
+++ b/languages/en.json
@@ -27,6 +27,9 @@
     "estudios-suelos":{
         "titulo": "SOIL STUDIES"
     },
+    "control-materiales":{
+        "titulo": "CONTROL DE CALIDAD DE MATERIALES"
+    },
     "nosotros":{
         "titulo":"ABOUT US",
         "contenido": ""
