--- a/languages/es.json
+++ b/languages/es.json
@@ -27,6 +27,9 @@
     "estudios-suelos":{
         "titulo": "ESTUDIOS DE SUELOS"
     },
+    "control-materiales":{
+        "titulo": "CONTROL DE CALIDAD DE MATERIALES"
+    },
     "nosotros":{
         "titulo":"SOBRE NOSOTROS"
     },
