--- a/languages/en.json
+++ b/languages/en.json
@@ -6,8 +6,9 @@
         "inicio": "Home",
         "nosotros": "About us",
         "servicios": "Services",
-        "servicios1": "Soil studies",
-        "servicios2": "Quality control",
+        "servicio1": "Soil studies",
+        "servicio2": "Quality control",
+        "servicio3": "Drillings",
         "proyectos": "Projects",
         "contacto": "Contact us",
         "idioma": "Language"
@@ -17,18 +18,21 @@
         "btn-contactanos": "Contact us",
         "info-contacto": " ",
         "titulo-servicios": "OUR SERVICES",
-        "servicio1": "Estudios de suelos",
-        "servicio2": "Control de calidad",
-        "servicio3": "Nose",
+        "servicio1": "Geotechnical Studies",
+        "servicio2": "Quality Control of Materials",
+        "servicio3": "Drilling",
         "titulo-nosotros": "SOBRE NOSOTROS",
         "texto-nosotros": "In 2004, the consulting engineer with a Master's degree in Soil Mechanics, Oscar Osvaldo Jirón Boza, seeing the need that Nicaragua had, in the field of engineering, to technically and quantitatively develop the branch of geotechnical studies and materials of construction, founded the engineering company Geotecnia de Nicaragua (GEONIC), which is a company that generally carries out engineering studies and provides research services in the field of geology and geotechnics.",
         "titulo-proyectos": "PROYECTOS"
     },
-    "estudios-suelos":{
-        "titulo": "SOIL STUDIES"
+    "estudios-geotecnicos":{
+        "titulo": "GEOTECHNICAL STUDIES"
     },
     "control-materiales":{
         "titulo": "CONTROL DE CALIDAD DE MATERIALES"
+    },
+    "perforacion":{
+        "titulo": "DRILLING"
     },
     "nosotros":{
         "titulo":"ABOUT US",
