--- a/languages/es.json
+++ b/languages/es.json
@@ -8,7 +8,8 @@
         "servicios": "Servicios",
         "servicio1": "Estudios geotécnicos",
         "servicio2": "Control de calidad de materiales",
-        "servicio3": "Perforación",
+        "servicio3": "Laboratorio de suelos",
+        "servicio4": "Perforación",
         "proyectos": "Proyectos",
         "contacto": "Contacto",
         "idioma": "Idioma"
@@ -20,7 +21,8 @@
         "titulo-servicios": "NUESTROS SERVICIOS",
         "servicio1": "Estudios geotécnicos",
         "servicio2": "Control de calidad de materiales",
-        "servicio3": "Perforación",
+        "servicio3":"Laboratorio de suelos",
+        "servicio4": "Perforación",
         "titulo-nosotros": "SOBRE NOSOTROS",
         "texto-nosotros": "Nos especializamos en la planificación y ejecución de estudios de suelos de diversas escalas, respaldados por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro trabajo.",
         "titulo-proyectos": "PROYECTOS"
@@ -30,6 +32,9 @@
     },
     "control-materiales":{
         "titulo": "CONTROL DE CALIDAD DE MATERIALES"
+    },
+    "laboratorio-suelos":{
+        "titulo":"LABORATORIO DE SUELOS"
     },
     "perforacion":{
         "titulo": "PERFORACIÓN"
