Añadidos containers, solo cambios esteticos

--- a/languages/en.json
+++ b/languages/en.json
@@ -6,7 +6,7 @@
         "inicio": "Home",
         "nosotros": "About us",
         "servicios": "Services",
-        "servicio1": "Soil studies",
+        "servicio1": "Geotechnical Studies",
         "servicio2": "Quality control",
         "servicio3": "Soil laboratory",
         "servicio4": "Drillings",
