Cambios en el horario del footer

--- a/languages/en.json
+++ b/languages/en.json
@@ -20,7 +20,7 @@
         "horario": "Schedule",
         "dias-habiles": "Monday to Friday:",
         "sabado":"Saturday:",
-        "domingo":"Sunday:",
+        "horario-domingo":"Sunday: <li>CLOSED </li>",
         "ubicacion": "Our location"
     },
     "inicio": {
